--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grayscale Range</title>
     <script src="./grayscale.js" defer></script>
+    <script src="./index.js" defer></script>
     <link rel="stylesheet" href="./styles.css">
+
 </head>
 <body>
-    <div id="buttons">
-        <button class="range-btn">RGB</button>
-        <button class="range-btn">Grayscale</button>
-    </div>
+    <button onclick="shift('rgb')" type="button" id="range-btn">RGB</button>
     <div id="section-grayscale">
         <h1 class="title">Grayscale Range from Black to White</h1>
     </div>
